[metadata]
name = xyston
version = 0.0.2
author = Thomas Kreuzer
author_email = thomas.kreuzer@rwth-aachen.de
description = Artificial intelligence toolkit
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/thkrz/xyston
classifiers =
  Programming Language :: Python :: 3
  License :: OSI Approved :: MIT License
  Operating System :: POSIX :: Linux

[options]
include_package_data = True
package_dir =
  = src
packages = find:
python_requies = >=3.10
install_requires =
  numpy
  torch

[options.package_data]
* = *.so

[options.packages.find]
where = src
