[metadata]
name = xyston
version = 0.0.2
author = Thomas Kreuzer
author_email = thomas.kreuzer@rwth-aachen.de
description = Artificial intelligence toolkit
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/thkrz/xyston
classifiers =
  Development Status :: 2 - Pre-Alpha
  Intended Audience :: Developers
  Intended Audience :: Education
  Intended Audience :: Science/Research
  Programming Language :: Fortran
  Programming Language :: Python :: 3
  License :: OSI Approved :: MIT License
  Operating System :: POSIX :: Linux
  Topic :: Scientific/Engineering
  Topic :: Scientific/Engineering :: Artificial Intelligence
  Topic :: Scientific/Engineering :: Mathematics
  Topic :: Software Development
  Topic :: Software Development :: Libraries
  Topic :: Software Development :: Libraries :: Python Modules
keywords =
  pytorch
  machine learning

[options]
include_package_data = True
package_dir =
  = src
packages = find:
python_requires = >=3.10
install_requires =
  numpy
  torch

[options.package_data]
* = *.so

[options.packages.find]
where = src
